# meilisearch-operator

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  clear.sh  compose.yml
.github/: copilot-instructions.md
.github/workflows/: release.yml
charts/meilisearch-operator/: Chart.yaml  values.yaml
charts/meilisearch-operator/templates/: clusterrole.yaml  clusterrolebinding.yaml  deployment.yaml  namespace.yaml  networkpolicy.yaml  serviceaccount.yaml
charts/meilisearch-samples/: Chart.yaml  values.yaml
charts/meilisearch-samples/templates/: indexes.yaml  keys.yaml  networkpolicy.yaml  server.yaml
crates/meilisearch-operator/: Cargo.toml
crates/meilisearch-operator/src/: error.rs  index_controller.rs  key_controller.rs  lib.rs  main.rs  server_controller.rs
crates/meilisearch-operator/src/crds/: index.rs  key.rs  mod.rs  policy.rs  server.rs
crates/meilisearch-operator/tests/: keygen.rs
manifests/: crds.yaml  deployment.yaml  rbac.yaml  samples.yaml
