[package]
name = "meilisearch-operator"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
rand = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
futures = "0.3"
time = { version = "0.3", features = ["parsing", "formatting"] }

# kube-rs stack
kube = { version = "2.0.1", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.26.0", features = ["latest", "schemars"] }
schemars = "1"

# Meilisearch client
meilisearch-sdk = "0.30.0"

serde_yaml = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

[dev-dependencies]
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "time"] }
serde_json = "1"
axum = { version = "0.8", default-features = false, features = ["tokio", "http1"] }
